www/css/styles.css
@import "colours.css";
@import "title.css";

html {
    background: var(--bg);
    font-family: sans-serif;
    height: 100%;
    color: var(--text);
}

body {
    display: flex;
    flex-direction: column;
    max-width: 90%;
    width: 20cm;
    margin: auto;
    height: 100%;
}

a {
    color: var(--accent);
}

div#content {
    flex-grow: 1;
}

h1, h2 {
    color: var(--accent);
}

video#stream-player {
    width: 100%;
    background-color: black;
    border: 1px solid var(--separator);
}

form#stream-setup {
    width: 100%;
    margin-top: 5px;
}

form#stream-setup > fieldset {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
    align-items: center;
    padding: 5px 0;
    border: none;
}

form#stream-setup input#stream-name {
    flex-grow: 1;
    min-width: 0;
}

form#stream-setup input#buffer-size {
    flex-grow: 1;
}

form#stream-setup output {
    width: 6ch;
    text-align: center;
}

span.info {
    color: var(--text);
    display: inline-block;
    font-size: 13pt;
    min-width: 20px;
    height: 20px;
    font-weight: normal;
    border: 1px solid var(--text-fainter);
    border-radius: 50%;
    line-height: 18px;
    text-align: center;
    cursor: help;
}

form#stream-setup * {
    font-size: 13pt;
}

p.instructions {
    width: 100%;
    text-align: center;
    color: var(--text-faint);
}

div#stream-list-container {
    position: fixed;
    top: 0;
    left: 0;
    max-height: 100%;
    margin-left: 20px;

    min-width: 260px;
    max-width: calc((100% - 20cm - 80px) / 2);

    /* Put scrollbar on left side */
    direction: rtl;
    overflow-y: auto;
}

@media only screen and (max-width: calc(20cm + 240px * 2)) {
    div#stream-list-container {
        padding: unset;
        position: unset;
        width: 100%;
        margin-left: 0;

        max-height: unset;
        min-width: unset;
        max-width: unset;

        direction: ltr;
        border-top: 1px solid var(--separator-faint);
    }
}

div#stream-list-container > h2 {
    font-size: 16pt;
    margin-bottom: 5px;
}

ul#stream-list {
    white-space: nowrap;
    padding: 0;
    margin: 0;
    direction: ltr;
}

ul#stream-list > li {
    padding: 5px 0;
    display: flex;
    gap: 5px;
    align-items: center;
    flex-wrap: nowrap;
}

ul#stream-list > li > button {
    flex-grow: 1;
}

ul#stream-list > li > a {
    border: 1px solid;
    border-radius: 3px;
    padding: 2px 3px;
    text-decoration: none;
}

ul#stream-list * {
    overflow-x: hidden;
    text-overflow: ellipsis;
    font-size: 11pt;
}

footer {
    text-align: center;
    font-size: 10pt;
    color: var(--text-faint);
    padding: 10px;
}

